--- a/cargo.toml
+++ b/cargo.toml
@@ -1,4 +1,6 @@
 [workspace]
 members = [
     "rusti", #super crate
+    "rusti_rendering",# platform agnostic rendering stuff.  mostly traits to be impled by a backend.
+    "rusti_resources", #crate for handling dynamically loaded resources.
 ]
