--- a/rusti_rendering/Cargo.toml
+++ b/rusti_rendering/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "rusti"
+name = "rusti_rendering"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rusti_rendering = { path="../rusti_rendering", version="0.1.0" }
+rusti_resources = {path="../rusti_resources", version="0.1.0"}
