--- a/rusti_resources/Cargo.toml
+++ b/rusti_resources/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "rusti"
+name = "rusti_resources"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rusti_rendering = { path="../rusti_rendering", version="0.1.0" }
